[gd_scene load_steps=7 format=3 uid="uid://dbjy16yah0nrk"]

[ext_resource type="Script" path="res://demo_screen.gd" id="1_qk265"]
[ext_resource type="Texture2D" uid="uid://c34u1xy8grhw4" path="res://kirbySprites/kirby/parasol/paraFloat.png" id="2_s30jd"]
[ext_resource type="Texture2D" uid="uid://b3y5f70p3csob" path="res://kirbySprites/gooey/parasol/paraFloat.png" id="3_n7pv5"]

[sub_resource type="Animation" id="Animation_yon74"]
resource_name = "idle"
length = 1.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.133333, 0.266667, 0.4, 0.533333, 0.666667, 0.8, 0.933333, 1.06667),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 3, 2, 1, 0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.6),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 1)]
}

[sub_resource type="Animation" id="Animation_e4rax"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_bmv5d"]
_data = {
"RESET": SubResource("Animation_e4rax"),
"idle": SubResource("Animation_yon74")
}

[node name="demo" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -56.0
offset_top = -16.0
offset_right = -56.0
offset_bottom = -16.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qk265")

[node name="Main Menu" type="Button" parent="."]
layout_mode = 0
offset_left = 58.0
offset_top = 114.0
offset_right = 154.0
offset_bottom = 145.0
text = "Main Menu"

[node name="Demo World" type="Button" parent="."]
layout_mode = 0
offset_left = 161.0
offset_top = 114.0
offset_right = 266.0
offset_bottom = 145.0
text = "Demo World"

[node name="Demo minigame1" type="Button" parent="."]
layout_mode = 0
offset_left = 272.0
offset_top = 113.0
offset_right = 411.0
offset_bottom = 144.0
text = "Demo Minigame "

[node name="fishin" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.072
anchor_bottom = 0.082
offset_left = 273.0
offset_top = 155.0
offset_right = 359.16
offset_bottom = 144.016
text = "Fishin Minigame"

[node name="kirby" type="Sprite2D" parent="."]
position = Vector2(182, 89)
texture = ExtResource("2_s30jd")
hframes = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="kirby"]
libraries = {
"": SubResource("AnimationLibrary_bmv5d")
}
autoplay = "idle"

[node name="gooey" type="Sprite2D" parent="."]
position = Vector2(260, 71.4222)
texture = ExtResource("3_n7pv5")
flip_h = true
hframes = 5

[node name="AnimationPlayer" type="AnimationPlayer" parent="gooey"]
libraries = {
"": SubResource("AnimationLibrary_bmv5d")
}
autoplay = "idle"

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 64.0
offset_top = 150.0
offset_right = 469.0
offset_bottom = 268.0
text = "controls
p1: wasd j k /m1m2
p2: ^<v>  z x
esc or p to pause game
(restart the program to come back here)"

[connection signal="pressed" from="Main Menu" to="." method="_on_main_menu_pressed"]
[connection signal="pressed" from="Demo World" to="." method="_on_demo_world_pressed"]
[connection signal="pressed" from="Demo minigame1" to="." method="_on_demo_minigame_1_pressed"]
[connection signal="pressed" from="fishin" to="." method="_on_fishin_pressed"]
